# composing2025

./: bach.py  cjcomp.py  classico.py  demo_Pseg.py  demo_random.py  enum_fibonacci_dict.py  enum_fibonacci_read.py  enum_int_comps.py  enum_int_comps_asc.py  enum_int_comps_asc_alt.py  enum_lucas_dict.py  enum_pc_sets.py  enum_scale_subsets.py  gen_hexachords_sym.py  gen_permutation_chords.py  gen_quasi_oct_target.py  gen_trichords.py  gen_trichords_sym.py  music21_hello_world.py  music21_scales.py  music21_show_env.py  my_compliment.py  my_harmonization.py  my_invert.py  my_n_choose_k.py  my_scales.py  my_transpose.py  my_triangular_numbers.py  n_choose_k.py  output.md  permutation_chords.py  pyproject.toml  quasi_oct_target.py  readme.md  set_operations.ipynb  set_sorting.py  supersets.py  test.py
MIT-OCW/: class-10-video.ipynb  class-8-video.ipynb
notebooks/: bach.ipynb  comprehending_comprehensions.ipynb  music21_notebook.ipynb  parse_humdrum.py  python_tips.ipynb  set_operations.ipynb
output/: acoustic-pc-subsets.md  ascending-compositions-of-1-12.md  compositions-of-1-12.md  diatonic-pc-subsets.md  fibonacci.json  hexatonic-pc-subsets.md  lucas.json  octatonic-pc-subsets.md  pentatonic-pc-subsets.md  wholetone-pc-subsets.md
pieces/: part_scale.py
